--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,4 @@ hugo.development.toml
 # Netlify local dev artifacts (only if using `netlify dev`)
 .netlify/
 .hugo_build.lock
+.hugo_build.lock
