--- a/hugo.toml
+++ b/hugo.toml
@@ -72,6 +72,23 @@ subtitle = "Security patterns, failures, and fixes — from the trenches."
 icon = "/images/oob.png"
 iconHeight = 60
 
+# All social media accounts
 [[params.socialIcons]]
 name = "github"
 url = "https://github.com/oob-skulden/oob-skulden-site"
+
+[[params.socialIcons]]
+name = "linkedin"
+url = "https://www.linkedin.com/in/stonepedal/"
+
+[[params.socialIcons]]
+name = "reddit"
+url = "https://www.reddit.com/user/oobskulden/"
+
+[[params.socialIcons]]
+name = "x"
+url = "https://x.com/oobskulden"
+
+[[params.socialIcons]]
+name = "rss"
+url = "/index.xml"
