--- a/netlify.toml
+++ b/netlify.toml
@@ -24,7 +24,7 @@
   status = 301
   force = true
 
-# If you ever had traffic to the old hyphen domain, canonicalize it too
+# Canonicalize old hyphen domain
 [[redirects]]
   from = "https://oob-skulden.com/*"
   to = "https://oobskulden.com/:splat"
@@ -48,4 +48,4 @@
     Referrer-Policy = "strict-origin-when-cross-origin"
     Permissions-Policy = "geolocation=(), microphone=(), camera=()"
     Strict-Transport-Security = "max-age=63072000; includeSubDomains; preload"
-    Content-Security-Policy = "default-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline'; script-src 'self'; object-src 'none'; base-uri 'self'; frame-ancestors 'none';"
+    Content-Security-Policy = "default-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'; object-src 'none'; base-uri 'self'; frame-ancestors 'none';"
