updated wording to hugo.toml

--- a/hugo.toml
+++ b/hugo.toml
@@ -51,7 +51,7 @@ subtitle = """
 Practical cloud security for small teams.
 Open source tools. Free tier architectures. Real detection queries. Actual remediation code.
 
-**No theory. No vendor pitches. Just working solutions.**
+**No theory. Vendor-agnostic. Just working solutions.**
 """
 
 [[params.profileMode.buttons]]
